# hype

./: .cursorignore  .cursorrules  .cz-config.js  .env  .env.development  .env.preview  .env.prod  .gitconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  REFACTOR.md  biome.json  bun.lockb  commitlint.config.js  cursor.desktop  drizzle.config.ts  eslint.config.js  hype.code-workspace  kysely.config.ts  package.json  schema.dbml  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.js  vitest.config.ts  vitest.setup.ts  vitest.workspace.ts  wrangler.local.toml  wrangler.toml
.husky/: pre-push  (+3 more)
scripts/: README-export-conversion.md  Sheets Master 2 JSON Seeds.ipynb  analyze-features-in-neighbourhoods.ts  backfill-image-content-hashes.ts  convert-export-to-csv.js  convert-foodco-to-csv.ts  create_ordered_backup.sh  csv-parser.ts  dev.sh  download-images.py  drizzle.patch  find-duplicate-translations.js  find-unused-translations.js  fix-new-images.py  foodco-data.csv  generate-dbml.ts  generate-image-derived-assets.ts  generate-map-previews.ts  generate-map-renders.ts  generate-map-style-previews.ts  generate-map-style-renders.ts  generate-upload-test-images.ts  ghost_maps_googls_maps_export_raw.geojson  ghostsigns-cleanup.ipynb  neighbourhood-feature-analysis.csv  poetry.toml  pyproject.toml  r2.cors.json  regen_drop_tables.sql  reset_db.sql  smart_backup_restore.sh  streets.json  sync-map-styles.ts  translate-neighborhoods.ts  truncate.sql  verify-sveltekit-patch.ts  (+1 more)
(+2392 files in other folders)
