[tool.poetry]
name = "ghostmapper"
version = "0.1.0"
description = ""
authors = ["Mart van de Ven <m@type.hk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.6.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
googletrans-py = "^4.0.0"
googlemaps = "^4.10.0"
shortuuid = "^1.0.13"
haversine = "^2.8.1"
datefinder = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
