[project]
name = "ghostmapper"
version = "0.1.0"
description = "Notebooks for Ghostmapper"
authors = ["Mart van de Ven <m@type.hk>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datefinder>=0.7.3",
    "fastnanoid>=0.4.1",
    "google-cloud-translate>=3.16.0",
    "googlemaps>=4.10.0",
    "googletrans-py>=4.0.0",
    "haversine>=2.8.1",
    "notebook>=7.2.2",
    "numpy>=2.1.2",
    "polars>=1.9.0",
    "pyproj>=3.7.0",
]
